--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,7 +32,7 @@ if ( NOT DEFINED STATICLIB_DEPS )
 endif ( )
 set ( staticlib_httpserver_USE_OPENSSL ON CACHE BOOL "" )
 staticlib_add_subdirectory ( ${STATICLIB_DEPS}/staticlib_config )
-staticlib_add_subdirectory ( ${STATICLIB_DEPS}/staticlib_pimpl )
+staticlib_add_subdirectory ( ${STATICLIB_DEPS}/staticlib_utils )
 staticlib_add_subdirectory ( ${CMAKE_CURRENT_LIST_DIR}/../../staticlib_winservice )
 set ( ${PROJECT_NAME}_DEPS staticlib_winservice )
 staticlib_pkg_check_modules ( ${PROJECT_NAME}_DEPS_PC REQUIRED ${PROJECT_NAME}_DEPS )
