ci config update

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,8 @@ install:
   - git clone https://github.com/staticlibs/staticlib_utils.git
 # test only
   - git clone https://github.com/staticlibs/staticlib_io.git
-  - git clone --recursive https://github.com/staticlibs/staticlib_tinydir.git
+  - git clone https://github.com/staticlibs/staticlib_tinydir.git
+  - git clone https://github.com/staticlibs/tinydir.git
 
 build: off
 
